Add ebakus scripts, web3-ebakus and wallet-loader

--- a/dapp/public/index.html
+++ b/dapp/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Portal Network - Big and Small</title>
+
+    <script type="text/javascript" src=".%PUBLIC_URL%/scripts/web3-ebakus.browser.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
   </head>
 
@@ -36,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src=".%PUBLIC_URL%/scripts/wallet-loader.min.js"></script>
   </body>
 </html>
