--- a/dapp/public/index.html
+++ b/dapp/public/index.html
@@ -8,8 +8,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href=".%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href=".%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +21,7 @@
     -->
     <title>Portal Network - Big and Small</title>
 
-    <script type="text/javascript" src=".%PUBLIC_URL%/scripts/web3-ebakus.browser.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/scripts/web3-ebakus.browser.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js" integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
   </head>
 
@@ -38,6 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript" src=".%PUBLIC_URL%/scripts/wallet-loader.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/scripts/wallet-loader.min.js"></script>
   </body>
 </html>
